package cloudsharing;

public class PremiumAccount extends AccountClass implements Account{


    public PremiumAccount(String name, String email){
        super(name,email);
    }
}
