@startuml
skinparam classAttributeIconSize 0

class Main

package cloudsharing {
  interface CloudSharing {
    +addAccount(email: String, type: AccountType): Result
    +upload(email: String, filename: String, fileSizeMb: int): Result
    +share(ownerEmail: String, receiverEmail: String, filename: String): Result
    +getAccount(email: String): Account
    +accounts(): Iterator<Account>
  }

  enum AccountType {
    BASIC
    PREMIUM
  }

  enum Result {
    SUCCESS
    ACCOUNT_EXISTS
    ACCOUNT_NOT_FOUND
    FILE_EXISTS
    FILE_NOT_FOUND
    SHARING_NOT_ALLOWED
    FILE_ALREADY_SHARED
    EXCEEDS_CAPACITY
  }

  class CloudSharingClass {
    -accounts: Array<Account>
  }

  interface Account {
    +getEmail(): String
    +getTypeLabel(): String
    +canShareFiles(): boolean
    +hasOwnedFile(fileName: String): boolean
    +getOwnedFile(fileName: String): FileI
    +hasSharedCopy(ownerEmail: String, fileName: String): boolean
    +canStoreOwnedFile(fileSizeMb: int): boolean
    +canStoreSharedFile(fileSizeMb: int): boolean
    +addOwnedFile(fileName: String, fileSizeMb: int): void
    +addSharedFile(file: FileI): void
    +ownedFiles(): Iterator<FileI>
    +sharedFiles(): Iterator<FileI>
  }

  abstract class AccountClass {
    -email: String
    -capacityMb: int
    -ownedFiles: Array<FileI>
    -sharedFiles: Array<FileI>
    -ownedSpaceMb: int
    -sharedSpaceMb: int
  }

  class BasicAccount {
    -BASIC_CAPACITY_MB: int
  }

  class PremiumAccount {
    -PREMIUM_CAPACITY_MB: int
  }

  interface FileI {
    +getName(): String
    +getFileSizeMb(): int
    +getOwnerEmail(): String
    +isShared(): boolean
  }

  class File {
    -name: String
    -sizeMb: int
    -ownerEmail: String
    -shared: boolean
  }
}

package dataStructures {
  interface Array<E>
  class ArrayClass<E>
  interface Iterator<E>
  class ArrayIteratorClass<E>
}

Main --> CloudSharing
Main ..> CloudSharingClass

CloudSharingClass ..|> CloudSharing
CloudSharing ..> AccountType
CloudSharing ..> Result
CloudSharingClass o-- Account

AccountClass ..|> Account
BasicAccount --|> AccountClass
PremiumAccount --|> AccountClass

File ..|> FileI
Account ..> FileI

ArrayClass ..|> Array
ArrayIteratorClass ..|> Iterator

CloudSharingClass ..> Array
AccountClass ..> Array
CloudSharingClass ..> Iterator
AccountClass ..> Iterator

@enduml
